--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
 
   <!-- Your code here -->
-
+  <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+   />
+  <img  
+   src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  
+   alt="an angry lion"
+  />
+  <img
+   src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  
+   alt="an angry lion"
+   title="Yes! Lion can be scary"
+  />
 </body>
 </html>
